Default to jpackage (bundled JVM) — works with any Java library
zinc build now defaults to --package (jpackage + jlink):
- Detects required modules via jdeps
- Bundles minimal JVM + fat jar into self-contained app
- Works with ALL Java libraries (no reflection config needed)
- No JVM install required on target machine

Build modes:
- zinc build (default: --package) → jpackage app (139MB, 205ms, all libs work)
- zinc build --native → GraalVM native-image (32MB, 7ms, needs lib support)
- zinc build --fat-jar → uber jar (7.8MB, 226ms, needs JVM)
- zinc build --docker → Docker image

zinc-flow verified: jpackaged app starts Javalin, serves HTTP, processes pipeline.

232 tests, 14 e2e, all passing.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>